--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "ws": "^8.12.1"
+    "socket.io": "^4.6.1"
   }
 }
